# todolist

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tests/: common.py  sqlite_config.py  sqllite_config.py
tests/controllers/: test_delete_tasks.py  test_get_tasks.py  test_post_tasks.py  test_update_tasks.py
todo_list/: entrypoint.sh  manage.py  run.py
todo_list/app/: __init__.py
todo_list/configuration/: env.py  postgresql_database.py  sqlite_database.py
todo_list/db_models/: models.py
todo_list/di/: dependency_injection.py
todo_list/helpers/: exceptions.py
todo_list/validators/: input_validators.py
