[tool.poetry]
name = "todo_list"
version = "0.1.0"
description = ""
authors = ["anastassiyatorovik <torovik1993@seznam.cz>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.44"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
