[tool.poetry]
name = "todo_list"
version = "0.1.0"
description = ""
authors = ["anastassiyatorovik <torovik1993@seznam.cz>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.44"
psycopg2 = "^2.9.5"
injector = "^0.20.1"
Flask-Injector = "^0.14.0"
flask-sqlalchemy = "^3.0.2"
marshmallow-sqlalchemy = "^0.28.1"
flask-marshmallow = "^0.14.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
